@@ -4,7 +4,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Configuração para servir arquivos estáticos.
@@ -20,7 +20,7 @@ public class WebConfig implements WebMvcConfigurer {
                 .addResourceLocations("classpath:/static/");
         
         // Servir imagens enviadas pelo usuário
-        String uploadPath = Paths.get("uploads/images").toAbsolutePath().toString();
+        String uploadPath = Path.of("uploads/images").toAbsolutePath().toString();
         registry.addResourceHandler("/uploads/images/**")
                 .addResourceLocations("file:" + uploadPath + "/");
     }
